Added crosssover content for a couple of events for #BearFam, A New Dream & NPC Reyla. Also enabled a few Diamond in the Rough CTs

--- a/[CP] Rodney O'Brien/i18n/default.json
+++ b/[CP] Rodney O'Brien/i18n/default.json
@@ -936,6 +936,11 @@
   "event-134371017.Plum.PoetryReaction": "I would stick around, but I've heard it all before and I'm sure I will hear it again.$3",
   "event-134371017.Henry.PoetryReaction": "......",
   "event-134371017.Sterling.PoetryReaction": "If this wakes up Mia, we're dead.",
+  "event-134371017.Sondra.PoetryReaction": "Oh, goodness, at this hour? Great effort and intonation, at least, Mr. O'Brien!$9",
+  "event-134371017.Sigurd.PoetryReaction": "Go on then, Rodney, give us another!$18",
+  "event-134371017.Gunnar.PoetryReaction": "How come the stars get to sleep and I get woken up?$7",
+  "event-134371017.Gudrun.PoetryReaction": "I have an EXAM in the morning! Are you TRYING to make me fail?$5",
+  "event-134371017.Teren.PoetryReaction": "You're louder than any drill sergeant I've ever known, how?$9",
   //Beach event with Oliver
   "event-134371016.01": "What a beautiful day.",
   "event-134371016.02": "Oh hey kiddo. You're the Governor's son, right? Oliver was it?",
