Fixed compat with S&S (modid issue) and with AND (Rodney standing inside a bookshelf)

--- a/[CP] Rodney O'Brien/i18n/default.json
+++ b/[CP] Rodney O'Brien/i18n/default.json
@@ -49,7 +49,7 @@
   "spring_Fri8": "So. They started airing the new Stellar Gallivant show.#$b#It's set a couple hundred centuries after the previous show. I was a bit skeptical, but it's pretty cool actually.#$b#They even added a character who's originally from the Gotoro Empire. That's a nice touch, especially since Stellar Gallivant has always been about peace and unity.$1",
   "spring_Fri10.Platonic": "Yesterday, I watched a documentary about the Fern Islands and now, I really want to visit again.$2#$b#Last time I went was on spring break when I was a student.#$b#Damn, I'm getting old.$2",
   "spring_Sat4": "I sent a beautifully handwritten letter to my daughter last week, telling her about my life in the Valley.#$b#You know what she did?#$b#She called me and asked me why I used such a primitive way to communicate with her!$5#$b#That hurt my feelings.$2#$b#Oh I'm still gonna write to her, just to piss her off.$1#$b#I'm such a good dad.",
-  "spring_Sat6": "Gus asked me the easiest way to burn a thousand calories.#$b#I told him to leave the pizza in the oven!$1#$b#He didn't like.$2",
+  "spring_Sat6": "Gus asked me the easiest way to burn a thousand calories.#$b#I told him to leave the pizza in the oven!$1#$b#He didn't like it.$2",
   "spring_Sat8": "I was at the library the other day and Gunther asked for advice on a personal matter.#$b#It told him 'Gunther, believe in your shelf'!$1#$b#He didn't laugh.$2",
   "spring_Sat10.Platonic": "While doing research for a new science fiction novel, I started reading a book about anti-gravity.#$b#It was impossible to put down!$1#$e#Get it?",
   "spring_Sun": "I had a breakthrough while working on my novel last night! So, tonight I'll celebrate by doing absolutely nothing.#$b#Isn't that the best feeling?$1",
